force-app/main/default/objects/Traffic_Provider_Config__mdt/Traffic_Provider_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration records for the provider-agnostic traffic and route optimization service. One record per provider. Only the lowest-priority active record is used by AquaRouteService.</description>
    <label>Traffic Provider Config</label>
    <pluralLabel>Traffic Provider Configs</pluralLabel>
</CustomObject>