force-app/main/default/objects/Traffic_Provider_Config__mdt/fields/API_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Credential_Name__c</fullName>
    <description>DeveloperName of the Named Credential to use for API calls. AquaRouteService builds callout: + this value. Empty = no API calls (manual mode).</description>
    <label>API Credential Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>