force-app/main/default/objects/Traffic_Provider_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this provider is eligible for selection by AquaRouteService. Set to false to block a provider without deleting the record. Only Manual is active by default.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>