force-app/main/default/objects/Traffic_Provider_Config__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Lower number = higher priority. AquaRouteService uses ORDER BY Priority__c ASC LIMIT 1 among active records. Google Maps = 1, Salesforce Maps = 2, Manual = 99.</description>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>